outreach (4 pages), enabler, nvc-healing, search, imrans-resume, footer_post_credits,

--- a/assets/posters/yoga.html
+++ b/assets/posters/yoga.html
@@ -133,7 +133,7 @@
 				<div class="tags">#BiharSchoolOfYoga</div>
 				<div class="letter-overlay">NE</div>
 				<div class="gallery-item-info">
-					<div class="description">Bihar School of Yoga was founded by Satyananda Saraswati in Munger, Bihar, India, in 1963</div>
+					<div class="description">Bihar School of Yoga was founded by Swami Satyananda Saraswati in Munger, Bihar, India, in 1963</div>
 				</div>
 			</div>
 		</div>
